# made-cpp

./: .gitignore
.github/workflows/: ci.yml  codecov.yml
hw02/: .gitignore  CMakeLists.txt  README.md  main.cpp
hw02/app/: main.cpp
hw02/cmake/: CodeCoverage.cmake
hw02/include/: CMakeLists.txt  matrix_calc.cpp  matrix_calc.h
hw02/tests/: CMakeLists.txt  test_matrix_calc.cpp
hw02/tests/reports/report/: index-sort-f.html  index-sort-l.html  index.html
hw02/tests/reports/report/11/: index-sort-f.html  index-sort-l.html  index.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
hw02/tests/reports/report/11/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  stl_algo.h.func-sort-c.html  stl_algo.h.func.html  stl_algo.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_iterator.h.func-sort-c.html  stl_iterator.h.func.html  stl_iterator.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  stl_iterator_base_types.h.func.html  stl_iterator_base_types.h.gcov.html  stream_iterator.h.func-sort-c.html  stream_iterator.h.func.html  stream_iterator.h.gcov.html  unique_ptr.h.func-sort-c.html  (+2 more)
hw02/tests/reports/report/11/ext/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
hw02/tests/reports/report/home/putin/Business/Learning/MADE/cpp/hws/hw02/include/: index-sort-f.html  index-sort-l.html  index.html  matrix_calc.cpp.func-sort-c.html  matrix_calc.cpp.func.html  matrix_calc.cpp.gcov.html
hw02/tests/reports/report/home/putin/Business/Learning/MADE/cpp/hws/hw02/tests/: index-sort-f.html  index-sort-l.html  index.html  test_matrix_calc.cpp.func-sort-c.html  test_matrix_calc.cpp.func.html  test_matrix_calc.cpp.gcov.html
hw02/tests/reports/report/usr/include/gtest/: gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
hw02/tests/reports/report/usr/include/gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
hw03/: CMakeLists.txt  README.md  main.cpp
hw03/include/: CMakeLists.txt  set.cpp
hw03/tests/: CMakeLists.txt  test_set.cpp
hw04/: .gitignore  CMakeLists.txt  README.md  main.cpp  sandbox.cpp
hw04/hyperfine_reports/: report_100mb.md  report_200mb.md  report_50mb.md
hw04/is_optimistic_parallelized/: CMakeLists.txt  is_optimistic_parallelized.hpp
hw04/is_optimistic_synchronized/: CMakeLists.txt  is_optimistic_synchronized.hpp
hw04/tests/: CMakeLists.txt  test_is_optimistic.cpp
hw04/utils/: CMakeLists.txt  is_optimistic.cpp  is_optimistic_from_stdin.cpp  main.cpp
